prevent tag wrapping

--- a/static/css/editor.css
+++ b/static/css/editor.css
@@ -77,6 +77,7 @@ div.tb_box {
 
 div.tb_header {
   margin-bottom: 5px;
+  margin-right: 110px;
 }
 
 span.tb_title {
@@ -94,6 +95,7 @@ span.tb_tag {
   margin-right: 5px;
   font-size: 13px;
   color: white;
+  white-space: nowrap;
 }
 
 span.nametag {
